# liteflags-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: demo.rs  flags.yaml
src/: custom_functions.rs  dto.rs  engine_builder.rs  flag_evaluator.rs  flag_store.rs  lib.rs
src/flag_loaders/: mod.rs  yaml.rs
